[metadata]
name = pyloss
version = attr: pyloss.__version__
url = https://github.com/rlaPHOENiX/pyloss
author = PHOENiX
author_email = pragma.exe@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = MIT
license_file = LICENSE
description = Loss classes for use on Image-based Machine Learning
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = machine learning, losses
platforms = any

[options]
install_requires =
    opencv-python~=4.4.0.46
    numpy~=1.19.4
    torch>=1.3
packages = find:
